# haskell-vhd

./: .gitignore  Footer.hs  FooterParser.hs  FooterTypes.hs  HeaderTypes.hs  LICENCE  README  SharedTypes.hs  Tests.hs  Vhd.hs  vhd.cabal
Data/: BitSet.hs  Range.hs  VHD.hs  Vhd.hs
Data/VHD/: Bat.hs  Bitmap.hs  Block.hs  CheckSum.hs  Checksum.hs  Context.hs  Disk.hs  Footer.hs  FooterTypes.hs  Geometry.hs  Header.hs  HeaderTypes.hs  Node.hs  Serialize.hs  SharedTypes.hs  Types.hs  Utils.hs
Data/Vhd/: Bat.hs  Bitmap.hs  Block.hs  Checksum.hs  Geometry.hs  Node.hs  Serialize.hs  Types.hs  Utils.hs
src/: Disk.hs  Footer.hs  FooterParser.hs  FooterTypes.hs  Header.hs  HeaderParser.hs  HeaderTypes.hs  SharedTypes.hs
