Name:                vhd
Version:             0.1
Author:              Jonathan Knowles
Maintainer:          jonathan.knowles@eu.citrix.com
Stability:           Experimental
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2

Library
    Build-depends:       base > 4.0, bytestring, cereal
    Exposed-modules:     Data.VHD.Disk
