Name:                vhd
Version:             0.1
Author:              Jonathan Knowles
Maintainer:          jonathan.knowles@eu.citrix.com
Copyright:           Citrix Systems Inc.
License:             BSD3
License-file:        LICENCE
Stability:           Experimental
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , cereal
  Exposed-modules:   Data.VHD

