Name:                vhd
Version:             0.1
Author:              Jonathan Knowles
Maintainer:          jonathan.knowles@eu.citrix.com
Copyright:           Citrix Systems Inc.
License:             BSD3
License-file:        LICENCE
Stability:           Experimental
Category:            System
Build-type:          Simple
Homepage:            https://github.com/jonathanknowles/hs-vhd
Cabal-version:       >=1.6
Data-files:          README

Library
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , cereal
  Exposed-modules:   Data.VHD


source-repository head
  type:     git
  location: git://github.com/jonathanknowles/hs-vhd
